internal/view/less/stylesheet.less
/* ... */
#content-scene {
    padding: 20px;
    display: flex;
    color: var(--color);
    background-color: var(--bg);
    flex-flow: column nowrap;
    align-items: center;

    #header {
        width: 100%;
        padding: 20px;
        max-width: 840px;
        margin-bottom: 16px;
        background-color: var(--contentBg);
        border: 1px solid var(--border);
        display: flex;
        flex-flow: column;
        align-items: center;

        #metadata {
            display: flex;
            flex-flow: row wrap;
            text-align: center;
            font-size: 16px;
            color: var(--colorLink);
        }

        #title {
            padding: 8px 0;
            grid-column-start: 1;
            grid-column-end: -1;
            font-size: 36px;
            font-weight: 700;
            word-break: break-word;
            hyphens: none;
            text-align: center;
        }

        #links {
            display: flex;
            flex-flow: row wrap;

            a {
                padding: 0 4px;
                color: var(--color);
                text-decoration: underline;

                &:hover,
                &:focus {
                    color: var(--main);
                }
            }
        }
    }

    #content {
        width: 100%;
        padding: 20px;
        max-width: 840px;
        background-color: var(--contentBg);
        border: 1px solid var(--border);

        * {
            font-size: 18px;
            line-height: 180%;

            &:not(:last-child) {
                margin-bottom: 20px;
            }
        }

        a {
            color: var(--color);
            text-decoration: underline;

            &:hover,
            &:focus {
                color: var(--main);
            }
        }

        pre,
        code {
            overflow: auto;
            border: 1px solid var(--border);
            font-family: 'Ubuntu Mono', 'Courier New', Courier, monospace;
            font-size: 16px;
        }

        pre {
            padding: 8px;

            >code {
                border: 0;
            }
        }

        ol,
        ul {
            padding-left: 16px;
        }

        img {
            max-width: 100%;
        }
    }
}

#page-home {
    #edit-box {
        background-color: var(--selectedBg);
        border-bottom: 1px solid var(--main);
    }

    #bookmarks-grid {
        display: grid;
        grid-template-rows: min-content;
        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
        grid-gap: 16px;
        padding: 16px;
        overflow: auto;

        .bookmark {
            align-self: start;
        }

        .pagination-box {
            grid-column-end: -1;
            grid-column-start: 1;
            display: flex;
            flex-flow: row nowrap;
            align-self: start;

            a {
                padding: 8px;
                color: var(--colorLink);

                &:hover,
                &:focus {
                    color: var(--main);
                }
            }

            input {
                width: 40px;
                padding: 8px;
                text-align: center;
                font-size: 0.9em;
                color: var(--color);
                border: 1px solid var(--border);
                background-color: var(--contentBg);
                margin: 0 8px;
            }

            p {
                font-size: 0.9em;
                color: var(--colorLink);
                line-height: 37px;
                font-weight: 600;

                &:last-of-type::before {
                    content: "/";
                    margin-right: 8px;
                }
            }
        }

        &.list {
            grid-gap: 0;
            padding-bottom: 0;
            grid-template-columns: minmax(0, 1000px);

            .pagination-box {
                padding: 16px 0;

                &:first-child {
                    padding-top: 0;
                }
            }

            @media (max-width: 600px) {
                padding: 16px 0 0;

                .pagination-box {
                    padding: 16px;
                }
            }
        }
    }

    #dialog-tags {
        .custom-dialog-body {
            grid-template-columns: repeat(2, minmax(0, 1fr));

            @media (max-width: 600px) {
                grid-template-columns: minmax(0, 1fr);
            }

            a {
                font-size: 1em;
                color: var(--color);

                span {
                    &:last-child {
                        font-size: 1em;
                        color: var(--colorLink);
                        margin-left: 4px;

                        &::before {
                            content: "(";
                            margin-right: 2px;
                        }

                        &::after {
                            content: ")";
                            margin-left: 2px;
                        }
                    }
                }

                &:hover,
                &:focus {
                    color: var(--main);
                }
            }
        }
    }
}
/* ... */

